--- a/NETGEAR_WNR2020.cfg
+++ b/NETGEAR_WNR2020.cfg
@@ -499,11 +499,13 @@
 	[140302]"Starting IP Address"=192.168.2.2
 	[140303]"Ending IP Address"=192.168.2.254
 	# Name;IP;MAC
-	[140304]"Address Reservation"=DENNIS-VM192.168.2.1008:00:27:4A:DF:33
 	[140304]"Address Reservation"=KEVIN-VM192.168.2.2008:00:27:94:FF:66
 	[140304]"Address Reservation"=SANTIAGO-HW192.168.2.3050:46:5D:39:4E:FF
 	[140304]"Address Reservation"=KEVIN-HW192.168.2.2C8:BC:C8:A0:AD:6F
-	[140304]"Address Reservation"=DENNIS-HW192.168.2.36C:40:08:AC:D7:FC
+	[140304]"Address Reservation"=DENNIS-HW192.168.2.3A0:CE:C8:07:FB:77
+	[140304]"Address Reservation"=DENNIS-VM192.168.2.1008:00:27:4A:DF:33
+	[140304]"Address Reservation"=JOCELYN-HW192.168.2.430:52:CB:34:28:8B
+	[140304]"Address Reservation"=JOCELYN-VM192.168.2.4008:00:27:5C:B3:73
 #< Remote Management >
 	# 0:off 1:on
 	[150001]"Turn Remote Management On"=0
@@ -579,4 +581,4 @@
 	[330004]"LAN-4"=0
 	# 0:off 1:on
 	[330005]"Wireless"=0
-  $ã¯d
+  ‹Y­°
