Added QA API server to static IP list for testing; works as expected.

--- a/NETGEAR_WNR2020.cfg
+++ b/NETGEAR_WNR2020.cfg
@@ -506,6 +506,7 @@
 	[140304]"Address Reservation"=DENNIS-VM192.168.2.1008:00:27:4A:DF:33
 	[140304]"Address Reservation"=JOCELYN-VM192.168.2.4008:00:27:5C:B3:73
 	[140304]"Address Reservation"=DENNISS-MBP192.168.2.438:C9:86:16:06:AB
+	[140304]"Address Reservation"=KEVIN-VM-QA192.168.2.2108:00:27:AE:8A:46
 #< Remote Management >
 	# 0:off 1:on
 	[150001]"Turn Remote Management On"=0
@@ -581,4 +582,4 @@
 	[330004]"LAN-4"=0
 	# 0:off 1:on
 	[330005]"Wireless"=0
-  1nf
+  ã&£å
