--- a/NETGEAR_WNR2020.cfg
+++ b/NETGEAR_WNR2020.cfg
@@ -504,9 +504,12 @@
 	[140304]"Address Reservation"=KEVIN-HW192.168.2.2C8:BC:C8:A0:AD:6F
 	[140304]"Address Reservation"=JOCELYN-HW192.168.2.3A0:CE:C8:07:FB:77
 	[140304]"Address Reservation"=DENNIS-VM192.168.2.1008:00:27:4A:DF:33
-	[140304]"Address Reservation"=JOCELYN-VM192.168.2.4008:00:27:5C:B3:73
+	[140304]"Address Reservation"=JOCELYN-VM192.168.2.4008:00:27:1C:FD:D0
 	[140304]"Address Reservation"=DENNISS-MBP192.168.2.438:C9:86:16:06:AB
 	[140304]"Address Reservation"=KEVIN-VM-QA192.168.2.2108:00:27:AE:8A:46
+	[140304]"Address Reservation"=SES-QA192.168.2.1108:00:27:E8:21:AD
+	[140304]"Address Reservation"=SantiagoVM1192.168.2.3108:00:27:00:07:33
+	[140304]"Address Reservation"=jocelynClone192.168.2.4108:00:27:2C:3A:73
 #< Remote Management >
 	# 0:off 1:on
 	[150001]"Turn Remote Management On"=0
@@ -582,4 +585,4 @@
 	[330004]"LAN-4"=0
 	# 0:off 1:on
 	[330005]"Wireless"=0
-  ã&£å
+  É”
