All VMs added and configured all IPs; works

--- a/NETGEAR_WNR2020.cfg
+++ b/NETGEAR_WNR2020.cfg
@@ -510,6 +510,12 @@
 	[140304]"Address Reservation"=SES-QA192.168.2.1108:00:27:E8:21:AD
 	[140304]"Address Reservation"=SantiagoVM1192.168.2.3108:00:27:00:07:33
 	[140304]"Address Reservation"=jocelynClone192.168.2.4108:00:27:2C:3A:73
+	[140304]"Address Reservation"=KevinVMProd192.168.2.2208:00:27:FA:0A:E0
+	[140304]"Address Reservation"=SES-PROD192.168.2.1208:00:27:75:8D:A3
+	[140304]"Address Reservation"=KevinM-Prod HS192.168.2.2308:00:27:D0:78:4C
+	[140304]"Address Reservation"=JOC-PROD192.168.2.4208:00:27:05:05:92
+	[140304]"Address Reservation"=JOC-PROD HS192.168.2.4308:00:27:86:1E:63
+	[140304]"Address Reservation"=SANTIAGO-PROD192.168.2.3208:00:27:37:98:DD
 #< Remote Management >
 	# 0:off 1:on
 	[150001]"Turn Remote Management On"=0
@@ -585,4 +591,4 @@
 	[330004]"LAN-4"=0
 	# 0:off 1:on
 	[330005]"Wireless"=0
-  É”
+  Þê
